[package]
name = "limitation-actix-middleware"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
futures = "0.1.29"
limitation = { path = "../limitation" }
log = "0.4.8"

[dev-dependencies]
version-sync = "0.8.1"
