[package]
name = "limitation-actix-middleware"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fnichol/limitation"
documentation = "https://docs.rs/limitation-actix-middleware"
readme = "README.md"
keywords = ["rate-limit", "rate-limiting", "actix-web", "middleware"]
categories = ["asynchronous", "web-programming"]
description = """
An Actix web middleware for rate limiting requests using a fixed window counter
keyed on a header.
"""

[badges]
cirrus-ci = { repository = "fnichol/limitation" }

[dependencies]
actix-web = "1.0.8"
futures = "0.1.29"
limitation = { version = "0.1.1", path = "../limitation" }
log = "0.4.8"

[dev-dependencies]
version-sync = "0.8.1"
