[package]
name = "limitation-example"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limitation = { path = "../limitation" }
tokio = "0.1.22"
futures = "0.1.29"
