[package]
name = "limitation-proxy"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "0.2.10"
actix-rt = "0.2.5"
actix-web = "1.0.8"
env_logger = "0.7.1"
futures = "0.1.29"
limitation-actix-middleware = { path = "../limitation-actix-middleware" }
log = "0.4.8"
url = "2.1.0"
